force-app/main/default/objects/Contact/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <formula>Unidade__r.Alugado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>