force-app/main/default/objects/Contact/fields/Edificio__c.field-meta.xml
<CustomField>
    <fullName>Edificio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edificio</label>
    <referenceTo>Edificio__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>