force-app/main/default/objects/Contact/fields/Tipo_Loca_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Loca_o__c</fullName>
    <formula>CASE( Unidade__r.Tipo_Loca_o__c , &apos;Regular&apos;, &apos;Regular&apos;, &apos;Temporada&apos;, &apos;Temporada&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Locação</label>
    <type>Text</type>
</CustomField>