force-app/main/default/objects/Contact/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade</label>
    <referenceTo>Unidade__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>