force-app/main/default/objects/Contact/recordTypes/Inquilino.recordType-meta.xml
<RecordType>
    <fullName>Inquilino</fullName>
    <active>true</active>
    <label>Inquilino</label>
</RecordType>