force-app/main/default/objects/Contact/listViews/Lista_Copa.listView-meta.xml
<ListView>
    <fullName>Lista_Copa</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Edificio__c</columns>
    <columns>Unidade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Admin</value>
    </filters>
    <label>Lista Copa</label>
</ListView>